# rust-rest

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yml  ingress.yml  migrate-database.yml  service.yml
migrations/: Dockerfile
migrations/2019-06-17-132042_create_person/: up.sql
migrations/2019-06-18-123443_create_users/: up.sql
src/: db.rs  main.rs  person.rs  routes.rs  schema.rs
src/api/: auth.rs  mod.rs
src/person/: mod.rs  model.rs  schema.rs
src/user/: auth.rs  mod.rs  model.rs  schema.rs
