[package]
name = "rust-rest"
version = "0.1.0"
authors = ["Alexandr Semenov <aleksandr.semenov@gs-labs.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.9.0"
rocket = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["sqlite","r2d2"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]