[package]
name = "rust-rest"
version = "0.1.0"
authors = ["Alexandr Semenov <aleksandr.semenov@gs-labs.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.4"
dotenv = "0.9.0"
jwt = "0.4.0"
rust-crypto = "0.2"
rustc-serialize = "0.3"
rocket = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["postgres","sqlite","r2d2"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
openssl = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
